cadvisor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cadvisor-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: png.cadvisor
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cadvisor
            port:
              number: 8080
