logstash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logstash-logstash
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: png.logstash
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logstash
            port:
              number: 9600
