node-exporter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-exporter-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: png.pickme
    http:
      paths:
      - path: /node-exporter
        pathType: Prefix
        backend:
          service:
            name: node-exporter
            port:
              number: 9100
